--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shimmer: ^2.0.0
   stream_transform: ^2.1.0
   url_launcher: ^6.1.8
+  win32: ^5.5.4
 
 dev_dependencies:
   build_runner: ^2.3.3
