--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,34 +29,34 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cached_network_image: ^3.2.3
-  carousel_slider: ^4.2.1
-  cupertino_icons: ^1.0.2
+  cached_network_image: ^3.4.1
+  carousel_slider: ^5.0.0
+  cupertino_icons: ^1.0.8
   dartz: ^0.10.1
-  dio: ^4.0.6
-  equatable: ^2.0.5
+  dio: ^5.8.0+1
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.1
+  flutter_bloc: ^9.0.0
   flutter_rating_bar: ^4.0.1
-  get_it: ^7.2.0
-  go_router: ^6.0.9
+  get_it: ^8.0.3
+  go_router: ^14.7.2
   google_fonts: ^4.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.0.12
-  readmore: ^2.2.0
-  shimmer: ^2.0.0
-  stream_transform: ^2.1.0
-  url_launcher: ^6.1.8
-  win32: ^5.5.4
+  path_provider: ^2.1.5
+  readmore: ^3.0.0
+  shimmer: ^3.0.0
+  stream_transform: ^2.1.1
+  url_launcher: ^6.3.1
+  win32: ^5.10.1
 
 dev_dependencies:
-  build_runner: ^2.3.3
-  flutter_lints: ^2.0.0
+  build_runner: ^2.4.14
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  hive_generator: ^2.0.0
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
