feat: create comprehensive professional README and update project configuration
- Add professional README with detailed features, architecture, and installation guide
- Include badges, visual structure, and developer-focused documentation
- Update project configuration files for cross-platform compatibility
- Enhance project presentation for portfolio and collaboration purposes

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.movies_app">
+    package="com.munir.munirmovies">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="movies_app"
+        android:label="Munir Movies"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
