feat: add comprehensive copyright and licensing
- Add MIT License file with proper copyright notice
- Include copyright section in README with license reference
- Add copyright header to main.dart file
- Update pubspec.yaml with author information and homepage
- Establish clear intellectual property ownership and usage terms

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: movies_app
-description: A new Flutter project.
+description: A modern Flutter app for discovering movies and TV shows with clean architecture.
+author: Munir <your.email@example.com>
+homepage: https://github.com/black12-ag/movies-app
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
